--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,25 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+  "main": "dist/index.js",
+  "license": "MIT",
+  "scripts": {
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "prestart": "yarn build",
+    "start": "node ."
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongodb": "^3.5.9",
+    "uuid": "^8.2.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.7",
+    "@types/mongodb": "^3.5.25",
+    "@types/node": "^14.0.18",
+    "@types/uuid": "^8.0.0",
+    "tslint": "^6.1.2",
+    "typescript": "^3.9.6"
+  }
 }
