--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,13 @@
     "start": "node ."
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.5.9",
     "uuid": "^8.2.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.7",
     "@types/mongodb": "^3.5.25",
     "@types/node": "^14.0.18",
